Fix error of peroxide

--- a/Notes/TOV.ipynb
+++ b/Notes/TOV.ipynb
@@ -689,11 +689,218 @@
     "for eq in [TOV0, TOV1, TOV2]:\n",
     "    show(eq)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L'Hospital's Rule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}4 \\, \\pi r^{2} \\frac{\\partial^{2}}{(\\partial r)^{2}}\\rho\\left(r\\right) + 16 \\, \\pi r \\frac{\\partial}{\\partial r}\\rho\\left(r\\right) + 8 \\, \\pi \\rho\\left(r\\right)</script></html>"
+      ],
+      "text/plain": [
+       "4*pi*r^2*diff(rho(r), r, r) + 16*pi*r*diff(rho(r), r) + 8*pi*rho(r)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(TOV0.rhs(), r, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}4 \\, \\pi r^{3} \\frac{\\partial}{\\partial r}P\\left(r\\right) + 12 \\, \\pi r^{2} P\\left(r\\right) + \\frac{\\partial}{\\partial r}m\\left(r\\right)</script></html>"
+      ],
+      "text/plain": [
+       "4*pi*r^3*diff(P(r), r) + 12*pi*r^2*P(r) + diff(m(r), r)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(4*pi*r^3*P(r) + m(r), r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\lim_{r \\to 0}\\, \\frac{4 \\, \\pi r^{3} P\\left(r\\right) + m\\left(r\\right)}{r^{2} - 2 \\, r m\\left(r\\right)}</script></html>"
+      ],
+      "text/plain": [
+       "limit((4*pi*r^3*P(r) + m(r))/(r^2 - 2*r*m(r)), r, 0)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "limit(TOV1.rhs(), r=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tov = - (rho(r) + P(r))*(m(r) + 4*pi*r^3*P(r)) / (r^2 - 2*m(r)*r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-\\frac{{\\left(4 \\, \\pi r^{3} P\\left(r\\right) + m\\left(r\\right)\\right)} {\\left(P\\left(r\\right) + \\rho\\left(r\\right)\\right)}}{r^{2} - 2 \\, r m\\left(r\\right)}</script></html>"
+      ],
+      "text/plain": [
+       "-(4*pi*r^3*P(r) + m(r))*(P(r) + rho(r))/(r^2 - 2*r*m(r))"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-{\\left(4 \\, \\pi r^{3} \\frac{\\partial^{2}}{(\\partial r)^{2}}P\\left(r\\right) + 24 \\, \\pi r^{2} \\frac{\\partial}{\\partial r}P\\left(r\\right) + 24 \\, \\pi r P\\left(r\\right) + \\frac{\\partial^{2}}{(\\partial r)^{2}}m\\left(r\\right)\\right)} {\\left(P\\left(r\\right) + \\rho\\left(r\\right)\\right)} - 2 \\, {\\left(4 \\, \\pi r^{3} \\frac{\\partial}{\\partial r}P\\left(r\\right) + 12 \\, \\pi r^{2} P\\left(r\\right) + \\frac{\\partial}{\\partial r}m\\left(r\\right)\\right)} {\\left(\\frac{\\partial}{\\partial r}P\\left(r\\right) + \\frac{\\partial}{\\partial r}\\rho\\left(r\\right)\\right)} - {\\left(4 \\, \\pi r^{3} P\\left(r\\right) + m\\left(r\\right)\\right)} {\\left(\\frac{\\partial^{2}}{(\\partial r)^{2}}P\\left(r\\right) + \\frac{\\partial^{2}}{(\\partial r)^{2}}\\rho\\left(r\\right)\\right)}</script></html>"
+      ],
+      "text/plain": [
+       "-(4*pi*r^3*diff(P(r), r, r) + 24*pi*r^2*diff(P(r), r) + 24*pi*r*P(r) + diff(m(r), r, r))*(P(r) + rho(r)) - 2*(4*pi*r^3*diff(P(r), r) + 12*pi*r^2*P(r) + diff(m(r), r))*(diff(P(r), r) + diff(rho(r), r)) - (4*pi*r^3*P(r) + m(r))*(diff(P(r), r, r) + diff(rho(r), r, r))"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(tov.numerator(), r, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-2 \\, r \\frac{\\partial^{2}}{(\\partial r)^{2}}m\\left(r\\right) - 4 \\, \\frac{\\partial}{\\partial r}m\\left(r\\right) + 2</script></html>"
+      ],
+      "text/plain": [
+       "-2*r*diff(m(r), r, r) - 4*diff(m(r), r) + 2"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff(tov.denominator(), r, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\frac{P\\left(0\\right) + \\rho\\left(0\\right)}{2 \\, r} + \\frac{{\\left(2 \\, {\\left(\\mathrm{D}_{0, 0}\\left(P\\right)\\left(0\\right) + \\mathrm{D}_{0, 0}\\left(\\rho\\right)\\left(0\\right)\\right)} m\\left(0\\right)^{2} + 2 \\, {\\left(\\mathrm{D}_{0}\\left(P\\right)\\left(0\\right) + \\mathrm{D}_{0}\\left(\\rho\\right)\\left(0\\right)\\right)} m\\left(0\\right) - 2 \\, {\\left(P\\left(0\\right) + \\rho\\left(0\\right)\\right)} \\mathrm{D}_{0}\\left(m\\right)\\left(0\\right) + P\\left(0\\right) + \\rho\\left(0\\right)\\right)} r}{8 \\, m\\left(0\\right)^{2}} + \\frac{2 \\, {\\left(\\mathrm{D}_{0}\\left(P\\right)\\left(0\\right) + \\mathrm{D}_{0}\\left(\\rho\\right)\\left(0\\right)\\right)} m\\left(0\\right) + P\\left(0\\right) + \\rho\\left(0\\right)}{4 \\, m\\left(0\\right)}</script></html>"
+      ],
+      "text/plain": [
+       "1/2*(P(0) + rho(0))/r + 1/8*(2*(D[0, 0](P)(0) + D[0, 0](rho)(0))*m(0)^2 + 2*(D[0](P)(0) + D[0](rho)(0))*m(0) - 2*(P(0) + rho(0))*D[0](m)(0) + P(0) + rho(0))*r/m(0)^2 + 1/4*(2*(D[0](P)(0) + D[0](rho)(0))*m(0) + P(0) + rho(0))/m(0)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tov.taylor(r, 0, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-\\frac{{\\left(32 \\, \\pi P\\left(0\\right) m\\left(0\\right)^{2} + 4 \\, \\mathrm{D}_{0}\\left(m\\right)\\left(0\\right)^{2} - 2 \\, m\\left(0\\right) \\mathrm{D}_{0, 0}\\left(m\\right)\\left(0\\right) - 4 \\, \\mathrm{D}_{0}\\left(m\\right)\\left(0\\right) + 1\\right)} r^{2}}{16 \\, m\\left(0\\right)^{3}} + \\frac{r {\\left(2 \\, \\mathrm{D}_{0}\\left(m\\right)\\left(0\\right) - 1\\right)}}{8 \\, m\\left(0\\right)^{2}} - \\frac{1}{2 \\, r} - \\frac{1}{4 \\, m\\left(0\\right)}</script></html>"
+      ],
+      "text/plain": [
+       "-1/16*(32*pi*P(0)*m(0)^2 + 4*D[0](m)(0)^2 - 2*m(0)*D[0, 0](m)(0) - 4*D[0](m)(0) + 1)*r^2/m(0)^3 + 1/8*r*(2*D[0](m)(0) - 1)/m(0)^2 - 1/2/r - 1/4/m(0)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TOV1.rhs().taylor(r, 0, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 8.5",
+   "display_name": "SageMath 8.6",
    "language": "",
    "name": "sagemath"
   },
