--- a/Notes/TOV.ipynb
+++ b/Notes/TOV.ipynb
@@ -294,8 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "G = ric - 1/2 * g * R\n",
-    "G.set_name(r'G_{ab}')"
+    "Gab = ric - 1/2 * g * R\n",
+    "Gab.set_name(r'G_{ab}')"
    ]
   },
   {
@@ -318,7 +318,7 @@
     }
    ],
    "source": [
-    "G.display()"
+    "Gab.display()"
    ]
   },
   {
@@ -504,7 +504,7 @@
     }
    ],
    "source": [
-    "E = G - 8 * pi * T\n",
+    "E = Gab - 8 * pi * T\n",
     "E.set_name('E')\n",
     "E.display()"
    ]
@@ -694,12 +694,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ [G] = \\frac{[L]^3}{[M][T]^2} $$\n",
+    "$$ [\\rho] = \\frac{[M]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### L'Hospital's Rule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +719,7 @@
        "4*pi*r^2*diff(rho(r), r, r) + 16*pi*r*diff(rho(r), r) + 8*pi*rho(r)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +742,7 @@
        "4*pi*r^3*diff(P(r), r) + 12*pi*r^2*P(r) + diff(m(r), r)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +765,7 @@
        "limit((4*pi*r^3*P(r) + m(r))/(r^2 - 2*r*m(r)), r, 0)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +797,7 @@
        "-(4*pi*r^3*P(r) + m(r))*(P(r) + rho(r))/(r^2 - 2*r*m(r))"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +820,7 @@
        "-(4*pi*r^3*diff(P(r), r, r) + 24*pi*r^2*diff(P(r), r) + 24*pi*r*P(r) + diff(m(r), r, r))*(P(r) + rho(r)) - 2*(4*pi*r^3*diff(P(r), r) + 12*pi*r^2*P(r) + diff(m(r), r))*(diff(P(r), r) + diff(rho(r), r)) - (4*pi*r^3*P(r) + m(r))*(diff(P(r), r, r) + diff(rho(r), r, r))"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +843,7 @@
        "-2*r*diff(m(r), r, r) - 4*diff(m(r), r) + 2"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +866,7 @@
        "1/2*(P(0) + rho(0))/r + 1/8*(2*(D[0, 0](P)(0) + D[0, 0](rho)(0))*m(0)^2 + 2*(D[0](P)(0) + D[0](rho)(0))*m(0) - 2*(P(0) + rho(0))*D[0](m)(0) + P(0) + rho(0))*r/m(0)^2 + 1/4*(2*(D[0](P)(0) + D[0](rho)(0))*m(0) + P(0) + rho(0))/m(0)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +889,7 @@
        "-1/16*(32*pi*P(0)*m(0)^2 + 4*D[0](m)(0)^2 - 2*m(0)*D[0, 0](m)(0) - 4*D[0](m)(0) + 1)*r^2/m(0)^3 + 1/8*r*(2*D[0](m)(0) - 1)/m(0)^2 - 1/2/r - 1/4/m(0)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
